@@ -7,7 +7,7 @@ all_ok=1
 echo "Looking for toolchian..."
 
 touch testfile.txt
-tar --faketime "2013-12-24 23:59:01" -c -f testfile.tar testfile.txt
+tar --faketime "2013-12-24 23:59:01" --sort-input -c -f testfile.tar testfile.txt
 exitcode=$?
 rm -f testfile.txt ; rm -f testfile.tar
 
@@ -28,10 +28,10 @@ if [[ 0 != "$exitcode" ]]  ; then
 		echo "Ok, the tar supports extended options"
 	else
 		echo "" ; echo "ERROR:"
-		echo "Can not find extended tar with support for --faketime"
+		echo "Can not find extended tar with support for --faketime, --sort-input"
 		echo "Please install it from: "
-		echo "  https://github.com/mempo/mempo-deb/ directory tar, or"
-		echo "  https://github.com/rfree/various/tree/master/tar"
+		echo "  https://github.com/mempo/mempo-deb/ once this is ready, or while not available use:"
+		echo "  https://github.com/mempo/various/tree/master/tar once this is ready, or while not available use:"
 		exit 1 # error
 	fi
 	
