@@ -10,6 +10,7 @@ linux-image (linux-3.2.54-mempo-0.1.22) UNRELEASED; urgency=low
   * LC_ALL="C"
   * using tar with --faketime and FAKETIME_TIME
   * removed kernel_debug  kernel_doc kernel_manual targets for now
+  * require tar with also --sort-input
 
  -- mempo <mempo@mempo.org>  Sun, 12 Jan 2014 06:20:00 +0200
 
